--- a/src/components/style.css
+++ b/src/components/style.css
@@ -43,6 +43,23 @@
 .videoHidden {
     display: none;
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+      box-shadow: 1px 2px 3px grey;
+    border-radius: 10px;
+    width: 10px;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(121, 117, 117);
+    border-radius: 10px;
+    width: 5px;
+  }
 
 @media screen and (max-width: 600px) {
     .listHolder {
@@ -64,7 +81,7 @@
 
 /*      from chakra        */
 .chakra-input__right-element {
-    cursor:pointer;
+    cursor: pointer;
     border-radius: 10px;
 }
 .chakra-stack {
@@ -73,5 +90,6 @@
     align-items: center;
 }
 .chakra-stack > .chakra-skeleton{
+    border-radius: 10px;
     margin-bottom: 2rem;
 }
